[gd_scene load_steps=8 format=3 uid="uid://ednt3vyqafi5"]

[ext_resource type="Script" uid="uid://s3pvu8w5lt0t" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://cvut7msp7bxca" path="res://mob.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://c1dubdx8ibqro" path="res://player.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://dats3gsicw78r" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="AudioStream" uid="uid://ccadegjacqgeo" path="res://art/youtube_MFtr4rw-dwI_854x478_h264.wav" id="5_lquwl"]
[ext_resource type="AudioStream" uid="uid://k2lgbfk0wkpq" path="res://art/bullet_sound.mp3" id="6_7mycd"]

[sub_resource type="Curve2D" id="Curve2D_1bvp3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1279, 3, 0, 0, 0, 0, 1279, 464, 0, 0, 0, 0, 1281, 723, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_1bvp3")

[node name="Player" parent="." instance=ExtResource("2_h2yge")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_1bvp3")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
unique_name_in_owner = true
rotation = 0.00234558

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_lquwl")

[node name="BulletSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7mycd")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="hurt" from="Player" to="HUD" method="_on_player_hurt"]
[connection signal="iniciarTimerPowerUp" from="Player" to="HUD" method="_on_player_iniciar_timer_power_up"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
